<resources>
    <string name="app_name">RedmineMobileClient</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Неверное имя пользователя</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="wrong_password">Неверное имя пользователя или пароль.</string>
    <string name="forbidden_action">Недостаточно прав.</string>
    <string name="wrong_address">Сервер недоступен.</string>
    <string name="internal_error">Внутренняя ошибка</string>
    <string name="redmine_authenticator_label">Redmine client</string>
    <string name="account_already_exists">Такой аккаунт уже существует.</string>
    <string name="many_accounts_found">Обнаружено более одного сохраненного аккаунта</string>
    <string name="account_list_title">Войти в систему как...</string>
    <string name="zero_accounts">Аккаунтов не найдено</string>
    <string name="add_new_account">Добавить нового пользователя</string>
    <string name="remove_all_accounts">Удалить все аккаунты</string>
    <string name="tasks_view_settings">Настройки отображения</string>
    <string name="title_fmt">Некая настройка</string>
    <string name="key1_action">Выполнить</string>
    <string name="key1_summary">Выполнить быстро</string>
    <string name="show_tasks_by_date">Сортировка по дате</string>
    <string name="show_tasks_by_priority">Сортировка по приоритету</string>
    <string name="menu_tasks">Задачи</string>
    <string name="menu_projects">Проекты</string>
    <string name="menu_stat">Статистика</string>
    <string name="waiting_for_information">Загрузка данных...</string>
    <string name="project_first_letter">Project first letter</string>
    <string name="task_execution">Выполнение задания</string>
    <string name="task_ex_notification_title">Заголовок</string>
    <string name="task_ex_notification_message">Сообщение</string>
    <string name="channel_name">redmine_tsk_exec_channel</string>
    <string name="channel_description">Task_execution</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_details_tab">Детали задачи</string>
    <string name="task_comments_tab">Комментарии</string>
    <string name="task_attachments">Вложения</string>
    <string name="task_start_timer">Начать выполнение задачи</string>
    <string name="task_stop_timer">Закончить выполнение задачи</string>
    <string name="preference_file_key">com.example.diti.redminemobileclient.PREFERENCE_FILE_KEY</string>
    <string name="task_id_started_key">timer_id_key</string>
    <string name="task_time_started_key">timer_time_key</string>
    <string name="settings_base_url">base_url_for_redmine</string>
    <string name="settings_auth_token">auth_token</string>
    <string name="settings_username">username</string>
    <string name="stop_task_message">Время выполнения задания: \n</string>
    <string name="stop_task">Остановить</string>
    <string name="dont_stop_task">Отмена</string>
    <string name="new_task_title">Новая задача</string>
    <string name="new_task_project_label">Выбрать проект</string>
    <string name="new_task_subject_label">Введите короткое название задачи</string>
    <string name="new_task_description_label">Введите полное описание для задачи</string>
    <string name="new_task_priority_label">Приоритет</string>
    <string name="new_task_assigned_to_label">Выберите исполнителя из списка</string>
    <string name="new_task_parent_issue_label">0000</string>
    <string name="new_task_parent_issue_button">Выбрать</string>
    <string name="new_task_estimated_time_label">Оценка времени:</string>
    <string name="new_task_attachments_label">Вложения:</string>
    <string name="new_task_attachments_button">Выбрать</string>
    <string name="new_task_supervisors_label">Наблюдатели</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="new_task_empty_project_error">Выберите проект из списка</string>
    <string name="new_task_empty_subject_error">Пустое название</string>
    <string name="new_task_empty_description_error">Пустое описание</string>
    <string name="new_task_empty_assigned_to_error">Пустой исполнитель</string>
    <string name="new_task_empty_estimated_time_error">Пустое время</string>
    <string name="vertical_form_stepper_form_continue">Далее</string>
    <string name="vertical_form_stepper_form_last_step">Сохранить</string>
    <string name="vertical_form_stepper_form_confirm_button">Сохранить</string>
    <string name="connection_mistake">Ошибка подключения. Перезайдите в приложение.</string>
    <string name="new_task_parent_issue_is_wrong">Выберите значение из списка</string>
    <string name="action_login_via_apikey">Войти с помощью Api Key</string>
    <string name="prompt_api_key">API KEY</string>
    <string name="action_login_via_login">Войти с логином / паролем</string>
    <string name="empty_base_url_error">Подключение не установлено. В настройках не указан адрес сервера Redmine.</string>
    <string name="AM_BASE_URL">account_manager_base_url</string>
    <string name="AM_FIO">account_manager_user_name</string>
    <string name="AM_EMAIL">account_manager_user_email</string>
    <string name="error_empty_APIKEY">Введите API key</string>
    <string name="error_wrong_host_name">Неправильное имя сервера</string>
    <string name="error_send_new_comment">Новый комментарий не отправлен. Проверьте настройки подключения или перезагрузите приложение.</string>
    <string name="no_connection">Отсутствует подключение \n к интернету.</string>


    <string-array name="issue_priorities">
        <item>Нормальный</item>
        <item>Высокий</item>
        <item>Высочайший</item>
    </string-array>

    <string-array name="new_task_steps">
        <item>Проект</item>
        <item>Название</item>
        <item>Описание</item>
        <item>Приоритет</item>
        <item>Исполнитель</item>
        <item>Родительская задача</item>
        <item>Оценка времени (в часах)</item>
        <item>Вложения</item>
        <item>Наблюдатели</item>
    </string-array>
</resources>
