<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewTaskActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/new_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/new_task_title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:id="@+id/new_task_project_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_task_title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_task_project_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_project_label" />

        <Spinner
            android:id="@+id/new_task_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_task_subject_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_task_project_group"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/new_task_subject_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_subject_label" />
        <EditText
            android:id="@+id/new_task_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_task_description_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_task_subject_group"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/new_task_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_description_label" />
        <EditText
            android:id="@+id/new_task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_task_priority_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_task_description_group"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_task_priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_priority_label" />

        <Spinner
            android:id="@+id/new_task_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_task_assigned_to_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_task_priority_group"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_task_assigned_to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_assigned_to_label" />

        <Spinner
            android:id="@+id/new_task_assigned_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/new_task_parent_issue_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_task_assigned_to_group"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/new_task_parent_issue_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_parent_issue_label" />
        <EditText
            android:id="@+id/new_task_parent_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
        <Button
            android:id="@+id/new_task_parent_issue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_parent_issue_button"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/new_task_estimated_time_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_task_parent_issue_group"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_task_estimated_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_estimated_time_label" />

        <EditText
            android:id="@+id/new_task_estimated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/new_task_attachments_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_task_estimated_time_group"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/new_task_attachments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_attachments_label" />
        <Button
            android:id="@+id/new_task_attachments_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_attachments_button"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/new_task_supervisors_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_task_attachments_group"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_task_supervisors_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task_supervisors_label" />

        <Spinner
            android:id="@+id/new_task_supervisors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>
</RelativeLayout>